src/test/resources/outdated/expected/p4.kore.golden
Parse error: ../../../test/resources//outdated/p4.kore:1:13:
  |
1 | [#MainModule(S("SEMANTICS")),#EntryModules(S("K-BOTTOM-SORT"),S("K-REFLECTION"),S("ID"),S("RULE-PARSER"),S("AUTO-CASTS"),S("KSEQ"),S("K-TERM"),S("ACTION-PROFILE-SYNTAX"),S("INT-SYNTAX"),S("RULE-LISTS"),S("CHECKSUM-SYNTAX"),S("DEFAULT-CONFIGURATION"),S("KSEQ-SYMBOLIC"),S("DOMAINS-SYNTAX"),S("RULE-CELLS"),S("K-IO"),S("SET"),S("FLOAT-SYNTAX"),S("BOOL-SYNTAX"),S("AUTO-FOLLOW"),S("K-SORT-LATTICE"),S("PARSER-SYNTAX"),S("KCELLS"),S("PARSER-EXCEPTION-SYNTAX"),S("STRING-SYNTAX"),S("BASIC-K"),S("K-EQUAL"),S("CONTROL-SYNTAX"),S("STDOUT-STREAM"),S("STRING"),S("STDIN-STREAM"),S("K-TOP-SORT"),S("DOMAINS"),S("TABLE-SYNTAX"),S("INT"),S("REQUIRES-ENSURES"),S("LIST"),S("PROGRAM-LISTS"),S("LANGUAGE-PARSING"),S("P4-COMMON"),S("SEMANTICS"),S("SORT-K"),S("ID-PROGRAM-PARSING"),S("CONFIGURATION"),S("BOOL"),S("KSTRING"),S("K"),S("HEADER-SYNTAX"),S("P4-SYNTAX"),S("CONFIG-CELLS"),S("MAP"),S("KAST"),S("VALUE-SYNTAX"),S("ACTION-SYNTAX")),syntaxModule(KString@KSTRING("P4-SYNTAX"))]
  |             ^
unexpected '('
expecting '{'
